Rotates YZX/XZY stored images 90deg clockwise for x and y slices

--- a/examples/orientation-check.html
+++ b/examples/orientation-check.html
@@ -72,7 +72,7 @@
                   <option value="data/dti_FA.nii.gz">data/dti_FA.nii.gz (compressed, 395.6 KB)</option>
                   <option value="data/dti_V1.nii.gz">data/dti_V1.nii.gz (compressed, 1.2 MB)</option>
                   <option value="data/mni152_2009_256.nii.gz">data/mni152_2009_256.nii.gz (compressed, 4.5 MB)</option>
-                  <option value="data/2878_1_1_localizera.nii.gz">data/2878_1_1_localizera.nii.gz (compressed, 1.6 MB)</option>
+                  <option value="data/2878_1_1_localizera.nii.gz">data/2878_1_1_localizera.nii.gz (YZX pixel order, compressed, 1.6 MB)</option>
                 </datalist>
               </div>
             </div>
