--- a/examples/orientation-check.html
+++ b/examples/orientation-check.html
@@ -64,15 +64,17 @@
                 </div>
                 <input class="form-control" type="text" id="nifti-URL" placeholder="Enter URL to NIFTI file or pick from list" list="sample-nifti-files">
                 <datalist id="sample-nifti-files">
-                  <option value="data/avg152T1_LR_nifti.nii">data/avg152T1_LR_nifti.nii (uncompressed, 903 KB)</option>
-                  <option value="data/avg152T1_RL_nifti.nii.gz">data/avg152T1_RL_nifti.nii.gz (compressed, 531 KB)</option>
-                  <option value="data/avg152T1_LR_nifti2.nii.gz">data/avg152T1_LR_nifti2.nii.gz (compressed, 764 KB)</option>
-                  <option value="data/sample_image.nii.gz">data/sample_image.nii.gz (compressed, 1.5 MB)</option>
-                  <option value="data/fMRI_Ret_bars.nii.gz">data/fMRI_Ret_bars.nii.gz (compressed, 3.0 MB)</option>
-                  <option value="data/dti_FA.nii.gz">data/dti_FA.nii.gz (compressed, 395.6 KB)</option>
-                  <option value="data/dti_V1.nii.gz">data/dti_V1.nii.gz (compressed, 1.2 MB)</option>
-                  <option value="data/mni152_2009_256.nii.gz">data/mni152_2009_256.nii.gz (compressed, 4.5 MB)</option>
-                  <option value="data/2878_1_1_localizera.nii.gz">data/2878_1_1_localizera.nii.gz (YZX pixel order, compressed, 1.6 MB)</option>
+                    <option value="data/SC-N-3.nii">data/SC-N-3.nii</option>
+                    
+                    <option value="data/avg152T1_LR_nifti.nii">data/avg152T1_LR_nifti.nii (uncompressed, 903 KB)</option>
+                    <option value="data/avg152T1_RL_nifti.nii.gz">data/avg152T1_RL_nifti.nii.gz (compressed, 531 KB)</option>
+                    <option value="data/avg152T1_LR_nifti2.nii.gz">data/avg152T1_LR_nifti2.nii.gz (compressed, 764 KB)</option>
+                    <option value="data/sample_image.nii.gz">data/sample_image.nii.gz (compressed, 1.5 MB)</option>
+                    <option value="data/fMRI_Ret_bars.nii.gz">data/fMRI_Ret_bars.nii.gz (compressed, 3.0 MB)</option>
+                    <option value="data/dti_FA.nii.gz">data/dti_FA.nii.gz (compressed, 395.6 KB)</option>
+                    <option value="data/dti_V1.nii.gz">data/dti_V1.nii.gz (compressed, 1.2 MB)</option>
+                    <option value="data/mni152_2009_256.nii.gz">data/mni152_2009_256.nii.gz (compressed, 4.5 MB)</option>
+                    <option value="data/2878_1_1_localizera.nii.gz">data/2878_1_1_localizera.nii.gz (YZX pixel order, compressed, 1.6 MB)</option>
                 </datalist>
               </div>
             </div>
@@ -210,6 +212,11 @@
 
     element.dataset.imageId = imageIdObject.url;
 
+
+      //cornerstoneNIFTIImageLoader.nifti.loadVolumeTimepoint(imageIdObject).then((data) => {
+      //    console.info(data);
+      //});
+      //return;
     try {
       cornerstone.loadAndCacheImage(imageIdObject.url).then(function(image) {
 
@@ -255,9 +262,9 @@
     let url = document.getElementById('nifti-URL').value;
     let imageIdObject = ImageId.fromURL(`nifti:${url}`);
 
-    loadAndViewImage(elementZ, `nifti:${imageIdObject.filePath}#z`);
-    loadAndViewImage(elementX, `nifti:${imageIdObject.filePath}#x`);
-    loadAndViewImage(elementY, `nifti:${imageIdObject.filePath}#y`);
+    loadAndViewImage(elementZ, `nifti:${imageIdObject.filePath}#z,t-0`);
+    loadAndViewImage(elementX, `nifti:${imageIdObject.filePath}#x,t-0`);
+    loadAndViewImage(elementY, `nifti:${imageIdObject.filePath}#y,t-0`);
   }
 
   cornerstone.events.addEventListener('cornerstoneimageloadprogress', function(event) {
